# sqlalchemy-adapter

./: LICENSE  README.md  pyproject.toml
sqlalchemy_adapter/: __init__.py  abstract_database.py  context.py  core.py  database.py  exception.py  model.py  repository.py
sqlalchemy_adapter/core/: __init__.py  database.py  repository.py
sqlalchemy_adapter/ext/fastapi/: __init__.py  midleware.py
tests/: test_abstract_database.py  test_core.py  test_database.py  test_model.py  test_repository.py
